# allo-i-players

./: .gitignore  .gitmodules  2run.sh  CMakeLists.txt  LICENSE  README.md  audioLinks.md  debug.sh  immersivePlayer.cpp  init.sh  run.sh
.cache/clangd/index/: build_toml.cpp.A236B190F1D8BEFA.idx  conversions.cpp.027D11FDD58425E1.idx  cpptoml.h.0C09D7DC22920EEC.idx  parse.cpp.BE40906D0B6D7DE9.idx  parse_stdin.cpp.E67B992B417FFF1D.idx
al_ext/: .gitmodules  CMakeLists.txt
al_ext/assets3d/: CMakeLists.txt  al_Asset.hpp
al_ext/assets3d/src/: al_Asset.cpp
al_ext/ogre3D/: CMakeLists.txt
al_ext/opencv/: CMakeLists.txt
al_ext/openvr/: CMakeLists.txt
al_ext/openvr/src/: al_OpenVRDomain.cpp
al_ext/soundfile/: CMakeLists.txt  al_SoundfileBuffered.hpp
al_ext/soundfile/src/: al_SoundfileBuffered.cpp
al_ext/spatialaudio/: CMakeLists.txt
al_ext/statedistribution/: CMakeLists.txt
al_ext/statedistribution/examples/: basic_use.cpp  distributed_mesh.cpp  distributed_mesh2.cpp  domain.cpp  dynamic_mesh.cpp  dynamic_mesh_round_robin.cpp
al_ext/statedistribution/include/al_ext/statedistribution/: al_CuttleboneDomain.hpp  al_CuttleboneStateSimulationDomain.hpp  al_Serialize.hpp
al_ext/video/: CMakeLists.txt
al_ext/video/examples/: video_player.cpp
al_ext/video/include/al_ext/video/: al_MediaBuffer.hpp  al_VideoDecoder.hpp
al_ext/video/src/: al_VideoDecoder.cpp
src/: main.cpp
